# visperf

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  compile_flags.txt  docker-compose.yml  tmux.sh
.docker/: Makefile
docker/: Dockerfile  Makefile
paper/: Makefile  docker-compose.yml  paper.ps  paper.tex  references.bib  vgtc.cls
paper/pictures/: visperf-flow.graphml
paper/sections/: abstract.tex  conclusion.tex  perf.tex  related-works.tex  viscpu.tex  visperf.tex
presentation/: Makefile  docker-compose.yml  main.tex
presentation/images/: proposed-approach-placement.graphml
src/: perf_test_alloc1.cpp
src/applications/simple-ff-test/: CMakeLists.txt  Makefile  ff-farm.cpp  perf.json
src/applications/simple-ff-test/analysis/: plot-data.ipynb
src/applications/simple-ff-test/data/: perf-test-1-record.data.old  perf-test-1-record.txt
src/applications/simple-test/: CMakeLists.txt  Makefile  ff-farm.cpp
src/applications/simple-test/analysis/: plot-data.ipynb
src/applications/simple-test/data/: perf-test-1.csv  perf-test-2.csv
src/applications/simple-test/scripts/: build.sh
src/d3-dashboard/: package-lock.json  package.json
src/dashboard/: app.py  config.json
src/perf/: events.txt  perf-capture.sh  perf_capture.sh  run_base.sh
src/perf-parser/: Makefile  perf-capture.sh
src/pre-processing/: Makefile  notebook.ipynb  parse.py
src/spbench/: Dockerfile  build.sh
src/tool-chain/: Makefile  README.md  perf-capture.sh  run-base.sh
src/visperf/: .gitignore  (+3 more)
src/visperf-dashboard/: README.md  package-lock.json  package.json
(+83 files in other folders)
